Refactoring resource loading