@@ -1,2 +1,8 @@
 # Othello
 Reversi / Othello - DTU Software January Project 2023
+
+## How to run
+
+```shell
+ .\jdk-19-fx\bin\java.exe -jar --enable-preview --enable-native-access=ALL-UNNAMED .\build\libs\Othello.jar
+```
